--- a/trunk/admin/Tpl/default/Public/footer.html
+++ b/trunk/admin/Tpl/default/Public/footer.html
@@ -6,7 +6,7 @@ div.footer a:hover{color:silver; text-decoration:none; border-bottom:1px dotted}
 .think_run_time{text-align:center; width:100%;font-size:12px;}
 </style>
 <!-- 版权信息区域 -->
-<div id="footer" class="footer" >Powered by bone <span id="run"></span>
+<div id="footer" class="footer" >Powered by leehom <span id="run"></span>
 </div>
 </body>
 </html>
